--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,8 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^8.11.0
   gap: ^1.2.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  cached_network_image: ^2.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
