part 3 list_view

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+
+#json serializable
+*.g.dart
+
+#freezed
+*.freezed.dart
