--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,15 @@ dependencies:
   gap: ^1.2.0
   cupertino_icons: ^1.0.2
   cached_network_image: ^2.5.1
+  freezed_annotation: ^0.12.0
+  json_serializable:
+  intl: 0.17.0
+  timeago: ^3.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner:
+  freezed: ^0.12.7
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
